--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<!-- RShankar - 07/05/15 Adding a Menubar/Header Section -->
+<%= link_to "Home", welcome_index_path %>
+<%= link_to "About Us", welcome_about_path %>
+<%= link_to "Contact", welcome_contact_path %>
+<%= link_to "Features", welcome_features_path %>
+<%= link_to "FAQ", welcome_faq_path %>
+<%= link_to "Pricing", welcome_pricing_path %>
+<%= link_to "Login", root_path %>
 <%= yield %>
 
 </body>
