--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<!-- RShankar - 07/05/15 Adding a Menubar/Header Section -->
-<%= link_to "Home", welcome_index_path %>
-<%= link_to "About Us", welcome_about_path %>
-<%= link_to "Contact", welcome_contact_path %>
-<%= link_to "Features", welcome_features_path %>
-<%= link_to "FAQ", welcome_faq_path %>
-<%= link_to "Pricing", welcome_pricing_path %>
-<%= link_to "Login", root_path %>
-<%= yield %>
-
+	<!-- rshankar - 07/08/15 - Added Bootstrap -->
+	<div class="container">
+		<ul class="nav nav-tabs">
+			<!-- RShankar - 07/05/15 Adding a Menubar/Header Section -->
+			<li> <%= link_to "Home", welcome_index_path %> </li>
+			<li> <%= link_to "About Us", welcome_about_path %> </li>
+			<li> <%= link_to "Contact", welcome_contact_path %> </li>
+			<li> <%= link_to "Features", welcome_features_path %> </li>
+			<li> <%= link_to "FAQ", welcome_faq_path %> </li>
+			<li> <%= link_to "Pricing", welcome_pricing_path %> </li>
+			<li> <%= link_to "Login", root_path %> </li>
+			<li> <%= yield %> </li>
+		</ul>		
+	</div>
 </body>
 </html>
